dark mode minor fix

--- a/src/components/UI/EmptyState/EmptyState.module.css
+++ b/src/components/UI/EmptyState/EmptyState.module.css
@@ -17,3 +17,9 @@
     margin: 0;
     color: var(--color-dark-gray);
 }
+
+@media (prefers-color-scheme: dark) {
+    .EmptyState p{
+        color: var(--color-light-gray);
+    }
+}
